<resources>
    <!--Home-->
    <string name="app_name">Pawsome Pals</string>
    <string name="login">Login</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <!--Feed-->
    <string name="all">ALL</string>
    <string name="friends">Friends</string>
    <string name="recipes">Recipes</string>
    <string name="create_feeds">Create feeds</string>
    <string name="create_icon">create_icon</string>
    <!--Login-->
    <string name="login_header">Login</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_button_login">Login</string>
    <string name="login_create_new_account">Create new Account?</string>
    <string name="login_text_or">OR</string>
    <string name="login_button_google">Google</string>
    <string name="login_successful_login">Login is successful.</string>
    <string name="login_unsuccessful_login">Email or password is incorrect.</string>
    <string name="login_unsuccessful_google_login">Google sign in failed.</string>

    <!--SignUp-->
    <string name="signup_header">SignUp</string>
    <string name="login_existing_account">Already have an Account?</string>
    <string name="signup_button_register">Register</string>
    <string name="signup_successful_registration">Registration is successful.</string>
    <string name="signup_unsuccessful_registration">Registration is unsuccessful.</string>

    <!--Forgot Password-->
    <string name="forgot_password_header">Password Reset</string>
    <string name="forgot_password_button_reset">Reset</string>
    <string name="forgot_password_reset_email">Check your email.</string>
    <string name="forgot_password_reset_email_unsuccessful">This account is no registered.</string>
    <!-- Logout -->
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>

    <!--User Profile-->
    <string name="new_profile_header">Create User Profile</string>
    <string name="new_profile_male">Male</string>
    <string name="new_profile_female">Female</string>
    <string name="new_profile_other">Other</string>
    <string name="new_profile_DOB">Date of Birth</string>
    <string name="new_profile_save_button">Save</string>

    <!--Dog Profile-->
    <string name="new_dog_profile_header">Create Pal\'s Profile</string>

    <!--Create Recipe-->
    <string name="upload_photo">Upload Photo</string>
    <string name="give_your_recipe_a_name">Give your recipe a name</string>
    <string name="recipe_photo">Recipe Photo</string>
    <string name="description">Description</string>
    <string name="recipe_description_hint">Introduce your recipe, add notes, cooking tips, serving suggestions, etc...</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_hint">Add one or paste multiple steps</string>
    <string name="servings">Servings</string>
    <string name="serving_desc">Set the number of servings</string>
    <string name="prep_time">Prep Time</string>
    <string name="prep_desc">How long does it take to prepare this recipe?</string>
    <string name="cook_time_desc">How long does it take to cook this recipe?</string>
    <string name="cook_time">Cook Time</string>
    <string name="set_time">Set Time</string>
    <string name="set_servings">Set Servings</string>
    <string name="save">Save</string>
    <string name="servings_placeholder">%d serving</string>
    <string name="select_the_number_of_portions_this_recipe_makes">Select the number of portions this recipe makes</string>
    <string name="cancel">Cancel</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="photoVideo">Post Photo</string>
    <string name="tag_people">Tag People</string>
    <string name="add_location">Add Location</string>
    <string name="give_your_event_a_name">Give your event a name...</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="event_date">Event Date</string>
    <string name="event_date_desc">Select a date for your event</string>
    <string name="event_time">Event Time</string>
    <string name="event_time_desc">Set a time for your event</string>
    <string name="set_date">Set Date</string>
    <string name="give_your_post_a_caption">Give your post a caption...</string>
    <string name="share_your_ideas_here">Share your ideas here...</string>
    <string name="what_service_are_you_providing">What service are you providing?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_the_event">About the event...</string>
    <string name="tagged_user">Tagged User</string>
    <string name="tagged_location">Tagged Location</string>
    <string name="service_name">Service Name</string>
    <string name="service_details">Service Details</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="john_doe">John Doe</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_serving_size">Serving Size</string>

    <string name="create_group_name">Create a group name</string>

        <string-array name="filter_options_array">
            <item>By Popularity</item>
            <item>By Date</item>
        </string-array>


</resources>