<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feed"
        android:enabled="true"
        android:icon="@drawable/feed"
        android:title="@string/feed"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/chat"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/map"
        app:showAsAction="ifRoom"/>
</menu>