<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppToolbar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:visibility="visible"
            style="@style/Widget.AppCompat.Button.Borderless" />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="visible"
        style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/recipeNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="RecipeName"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/give_your_recipe_a_name"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cl" />

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border"
                android:contentDescription="@string/recipe_photo"
                android:padding="8sp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeNameEditText"

                />

            <ImageView
                android:id="@+id/addPhotoImageView"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:src="@drawable/addphoto"
                app:layout_constraintBottom_toBottomOf="@id/recipeImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recipeImageView"
                tools:layout_editor_absoluteY="144dp" />

            <ImageView
                android:id="@+id/deleteImageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/delete48px"
                app:layout_constraintBottom_toBottomOf="@id/recipeImageView"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/edit48px"
                app:layout_constraintBottom_toBottomOf="@id/recipeImageView"
                app:layout_constraintEnd_toEndOf="@id/recipeImageView" />

            <TextView
                android:id="@+id/descriptionTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeImageView" />

            <EditText
                android:id="@+id/descriptionEditTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="string"
                android:background="@drawable/border"
                android:hint="@string/recipe_description_hint"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitleTextView" />

            <TextView
                android:id="@+id/ingredientsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/ingredients"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditTextView" />

            <EditText
                android:id="@+id/ingredientsEditTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="string"
                android:background="@drawable/border"
                android:hint="@string/ingredients_hint"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsTitleTextView" />

            <TextView
                android:id="@+id/servingsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/servings"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsEditTextView" />


            <TextView
                android:id="@+id/servingsDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/serving_desc"
                app:layout_constraintEnd_toStartOf="@+id/setServingSizeTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/servingsTitleTextView" />
            <!--                android:background="@drawable/border"-->
            <!--                android:backgroundTint="@color/white"-->

            <TextView
                android:id="@+id/prepTimeTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/prep_time"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/servingsDescTextView" />

            <TextView
                android:id="@+id/prepTimeDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/prep_desc"
                app:layout_constraintEnd_toStartOf="@+id/setPrepTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prepTimeTitleTextView" />

            <TextView
                android:id="@+id/cookTimeTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/cook_time"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prepTimeDescTextView" />

            <TextView
                android:id="@+id/cookTimeDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cook_time_desc"
                app:layout_constraintEnd_toStartOf="@+id/setCookTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cookTimeTitleTextView" />

            <TextView
                android:id="@+id/setCookTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/set_time"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cookTimeDescTextView"
                app:layout_constraintTop_toTopOf="@+id/cookTimeDescTextView"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/darkPink"/>
           />


            <TextView
                android:id="@+id/setPrepTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/set_time"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/prepTimeDescTextView"
                app:layout_constraintTop_toTopOf="@+id/prepTimeDescTextView"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/darkPink"/>
               />


            <TextView
                android:id="@+id/setServingSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/set_servings"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/servingsDescTextView"
                app:layout_constraintTop_toTopOf="@+id/servingsDescTextView"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/darkPink"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</LinearLayout>
