<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/custom_border_sticker"
        android:contentDescription="@string/like"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/likenew" />

    <TextView
        android:id="@+id/likeCountTextView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/custom_border_sticker"
        android:text="(0)"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/commentButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/custom_border_sticker"
        android:contentDescription="@string/comment"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/message" />

    <TextView
        android:id="@+id/commentCountTextView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/custom_border_sticker"
        android:text="(0)"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/custom_border_sticker"
        android:contentDescription="@string/share"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sharepost" />


</LinearLayout>